Sun Dec 22 22:06:49 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* logmsg.c (do_verify): If noexec, skip the verification *without*
	printing a message.  Use cvs_output not printf.  Skip verification
	for client_active.

Wed Dec 18 12:27:35 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* repos.c (Name_Repository): Add comment regarding wording of
	"*PANIC*" error message.

1996-12-18  Jim Kingdon

	* client.c (call_in_directory): If the directory we are about
	to create is the same as CVSADM as seen by fncmp (for example,
	it is "cvs" and filenames are case-insensitive), then give a
	fatal error.

Tue Dec 17 13:14:22 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h.in: Add comments about SETXID security holes.

	* logmsg.c (do_verify): Reindent comments.  Check errno if return
	code from run_exec is -1, not if it is 1.
	* sanity.sh (info): Move tests info-4 and info-8 to end and rename
	them.  Add verifymsg tests.  Instead of forcibly removing loginfo,
	remove it nicely (test info-11).

Tue Dec 17 12:45:32 1996  Abe Feldman  <feldman@cyclic.com>

	* commit.c, import.c: Call do_verify as well as do_editor.
	* cvs.h (CVSROOTADM_VERIFYMSG): Define.
	* logmsg.c, cvs.h (do_verify, verifymsg_proc): New functions.
	(verifymsg_script): New variable.
	* mkmodules.c (filelist): Add CVSROOTADM_VERIFYMSG.

Mon Dec 16 13:24:47 1996  Ian Lance Taylor  <ian@cygnus.com>

	* lock.c (remove_locks): New static function, copied from part of
	Lock_Cleanup.
	(Lock_Cleanup): Call remove_locks.
	(Writer_Lock): Call remove_locks rather than Lock_Cleanup when
	waiting for a lock.

Thu Dec 12 10:36:37 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* login.c (get_cvs_password): If CVS_PASSWORD is set, print a
	warning (and then proceed to ignore it).  It was a documented
	feature, so we should point people who were using it to the
	replacement.

Mon Dec  9 12:35:43 1996  Ian Lance Taylor  <ian@cygnus.com>

	* server.c (server_updated): Change comment to only worry about